<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/guessOneAnswerCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="60dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessTwoAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessTwoAnswerCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="60dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessThreeAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="60dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessThreeAnswerCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="60dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="30sp"
        android:id="@+id/guessOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_1"/>


    <TextView
        android:textSize="30sp"
        android:id="@+id/guessOneCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_1_check"/>

    <TextView
        android:textSize="30sp"
        android:id="@+id/guessTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_2"/>

    <TextView
        android:textSize="30sp"
        android:id="@+id/guessTwoCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_2_check"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:textSize="30sp"
        android:id="@+id/guessThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_3"/>

    <TextView
        android:textSize="30sp"
        android:id="@+id/guessThreeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_3_check"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="guessOne,guessOneCheck,guessTwo,guessTwoCheck,guessThree,guessThreeCheck"
        app:flow_horizontalAlign="start"
        app:flow_verticalGap="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/enterFourLetterGuess"
        android:layout_width="266dp"
        android:layout_height="71dp"
        android:layout_marginTop="4dp"
        android:hint="@string/guess"
        android:inputType="text"
        android:lines="1"
        android:maxLength="4"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourLetterGuess"
        app:layout_constraintVertical_bias="0.803"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/fourLetterGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitGuess"
        android:layout_width="104dp"
        android:layout_height="59dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/enterFourLetterGuess"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />

    <TextView
        android:id="@+id/guessOneAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>